# loxo-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/loxo_cli/: __init__.py  __main__.py  client.py  config.py  errors.py  output.py  pagination.py
src/loxo_cli/commands/: _app.py  _helpers.py  activities.py  api.py  candidates.py  companies.py  configure.py  deals.py  jobs.py  people.py  ref.py  webhooks.py
src/loxo_cli/models/: __init__.py  base.py  candidate.py  company.py  deal.py  job.py  person.py  reference.py  webhook.py
tests/: test_app_state.py  test_client.py  test_cmd_activities.py  test_cmd_api.py  test_cmd_candidates.py  test_cmd_companies.py  test_cmd_configure.py  test_cmd_deals.py  test_cmd_jobs.py  test_cmd_people.py  test_cmd_ref.py  test_cmd_webhooks.py  test_config.py  test_error_exit_codes.py  test_errors.py  test_helpers.py  test_models.py  test_output.py  test_pagination.py  test_smoke.py
