[project]
name = "loxo-cli"
version = "0.1.0"
description = "Unofficial command-line interface for the Loxo recruiting ATS/CRM API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "click>=8",  # imported directly in errors.py (ClickException base); declare it explicitly
    "httpx>=0.27",
    "pydantic>=2",
    "rich>=13",
]

[project.scripts]
loxo = "loxo_cli.__main__:app"

[project.urls]
Homepage = "https://github.com/alphaomegateam/loxo-cli"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "ruff>=0.6",
    "black>=24",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loxo_cli"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["loxo_cli"]
explicit_package_bases = true
ignore_missing_imports = true
